--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,7 @@
    |         Login page            |
    |===============================| */
 
-.LogoMain{
-    margin-top: 20vh;
-}
+
 .LoginForm{
     margin: 20px;
 }
@@ -32,9 +30,6 @@
     color: #ffff;
 }
 @media only screen and (max-width: 600px) {
-    .LogoMain{
-        margin-top: 11vh;
-    }
     .LoginForm input{
         width : 70%;
     }
@@ -83,7 +78,10 @@ margin-left: 50px;
 }
 @media only screen and (max-width: 600px) {
     .LogoMain{
-        margin-top: 25vh;
+        margin-top: 11vh;
+    }
+    .LoginPage{
+        margin-bottom: 11vh;
     }
     .RegisterForm input{
         width : 70%;
@@ -150,7 +148,6 @@ height: 40px;
 .LeftBar i{
 font-size: 18px;
 }
-
 .CenterBar a{
 color:inherit;
 text-decoration: none;
@@ -162,4 +159,8 @@ font-weight: 600;
 }
 .NeetContent{
     padding: 10px;
+}
+.line{
+    margin:10px 35px 10px 35px;
+    color: black;
 }
