--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,6 @@ margin-left: 50px;
     color: #ffff;
 }
 @media only screen and (max-width: 600px) {
-    
     .RegisterForm input{
         width : 70%;
     }
@@ -109,8 +108,8 @@ margin-left: 50px;
     padding-top: 5px;
     padding-left:10px;  
 }
-.LeftMenu p{
-    font-size: 13px;
+.LeftMenu h6{
+    font-size: 14px;
 }
 .AccountMenu{
     display: flex;   
@@ -120,6 +119,9 @@ margin-left: 50px;
 }
 .icon{
     padding-right: 5px;
+}
+.acc{
+    padding-bottom: 8px;
 }
 /* |===============================|
    |         Slider                |
@@ -136,24 +138,28 @@ color: #ffff;
 display: flex;
 justify-content: space-between;
 align-items: center;
-padding: 0 30px 0 30px;
-height: 40px;
+padding: 0 30px 20px 30px;
+height: 80px;
 }
 
 .LeftBar i{
-font-size: 18px;
+font-size: 22px;
 }
 .CenterBar a{
+    font-size: 24px;
 color:inherit;
 text-decoration: none;
 font-weight: 600;
 }
 
 .RightBar i{
-    font-size: 18px;
+    font-size: 22px;
 }
 .NeetContent{
     padding: 10px;
+}
+.acc{
+
 }
 .line{
     margin:10px 35px 10px 35px;
