--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,9 @@ justify-content: space-between;
 align-items: center;
 padding: 0 30px 20px 30px;
 height: 80px;
+width:100%;
+position:absolute;
+   
 }
 
 .LeftBar i{
