--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,10 @@ margin-left: 50px;
 .acc{
     padding-bottom: 8px;
 }
+.acc a{
+    color: inherit;
+}
+   
 /* |===============================|
    |         Slider                |
    |===============================| */
