--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@
    |         Login page            |
    |===============================| */
 
-.LowerImg img{
+/* .LowerImg img{
     position: absolute;
     bottom: 0;
-}
+} */
 
 /* |===============================|
    |         Login page            |
