--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@
 .RegisterForm input{
     margin: 8px;
     width: 25%;
-    border-radius: 15px;
+    border-radius: 8px;
     padding: 3px;
 }
 .RegisterForm input::placeholder{
@@ -94,7 +94,7 @@ margin-left: 50px;
     }
   }
 .TextRegister{
-    margin: 5px;
+    margin: 5px 5px 15px 5px;
     font-size: 18px;
 }
 .TextRegister a{
@@ -146,29 +146,57 @@ margin-left: 50px;
    |         Navbar                |
    |===============================| */
 .NavBar{
-background-color: #93bc42;
+background-color:#0b579a ;
 color: #ffff;
 display: flex;
-justify-content: space-between;
+justify-content: space-around;
 align-items: center;
 padding: 0 30px 20px 30px;
-height: 80px;
+height: 85px;
 width: 100%;
-
+}
+.LeftBar{
+    border-radius: 50%;
+    background: #ffff;  
+}
+.LeftBar:hover{
+    margin-top: -40px;
 }
 
 .LeftBar i{
-font-size: 22px;
+font-size: 30px;
+color:#0b579a;
+margin:12px;
+
 }
-.CenterBar a{
-    font-size: 24px;
-color:inherit;
-text-decoration: none;
-font-weight: 600;
+.CenterBar{
+    border-radius: 50%;
+    background: #ffff;
+}
+.CenterBar i{
+    font-size: 30px;
+    color:#0b579a;
+    margin:12px;
+}
+.CenterBar:hover{
+    margin-top: -40px;
 }
 
+.RightBar{
+    border-radius: 50%;
+    background: #ffff;
+    
+}
 .RightBar i{
-    font-size: 22px;
+    font-size: 30px;
+color:#0b579a;
+margin:12px;
+}
+.RightBar:hover{
+    margin-top: -40px;
+}
+.RightBar i:hover{
+    font-size: 30px;
 }
 .NeetContent{
     padding: 10px;
@@ -180,7 +208,7 @@ font-weight: 600;
 }
 
 .text_content{
-    margin: 5px;
+    margin: 5px 5px 35px 5px;
     padding:8px;
     color: black;
     background-color: #A2FFDF;
