--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@
    |         Login page            |
    |===============================| */
 
-/* .LowerImg img{
+.LowerImg img{
     position: absolute;
     bottom: 0;
-} */
+}
 
 /* |===============================|
    |         Login page            |
@@ -14,6 +14,7 @@
 
 .LoginForm{
     margin: 20px;
+    
 }
 .LoginForm input{
     margin: 8px;
@@ -55,6 +56,10 @@
 .TextRegister a{
     color: #0b579a;
     text-decoration: none;
+}
+.line{
+    margin:10px 35px 10px 35px;
+    color: black;
 }
 
 /* |===============================|
@@ -177,14 +182,12 @@ width: 100%;
         color:#ffff;
         margin:18px;
         }
+
+
 .NeetContent{
     padding: 10px;
 }
 
-.line{
-    margin:10px 35px 10px 35px;
-    color: black;
-}
 
 .text_content{
     margin: 5px 5px 35px 5px;
@@ -192,6 +195,10 @@ width: 100%;
     color: black;
     background-color: #A2FFDF;
 }
+/* |===============================|
+   |         Quiz                  |
+   |===============================| */
+
 .quizs{
     padding: 10px;
 }
@@ -202,9 +209,6 @@ width: 100%;
 .attention{
     padding: 10px;
 }
-.questions{
-    padding: 15px;
-}
 .quizhead{
     margin-top: 10px;
     font-weight: 700;
@@ -213,4 +217,24 @@ width: 100%;
 
 .questions p{
     padding-top: 8px;
+}
+.question1{
+    background-color: #E7E7E7;
+    padding: 15px;
+}
+.question2{
+    padding: 15px;
+}
+.quizbtn{
+    border: inherit;
+    border-radius: 10px;
+    background-color:#0b579a ;
+    color:#ffff ;
+    padding: 8px;
+    width: 25%;
+    margin: 15px;
+}
+.quizbtn:hover{
+    background-color: #93bc42;
+    color: #ffff;
 }
